compiler/testData/cli/jvm/suspendInFunInterfaceIrDisabled.out
compiler/testData/cli/jvm/suspendInFunInterfaceIrDisabled.kt:2:5: error: 'suspend' modifier is not allowed on a single abstract member
    suspend fun foo()
    ^
COMPILATION_ERROR
