compiler/testData/cli/jvm/suspendInFunInterfaceIrDisabled.kt
fun interface FIC {
    suspend fun foo()
}
